# MnemonicNexus_Public

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PUBLIC_READINESS_SUMMARY.md  Public Alpha Repo State.md  README.md  README_DEPLOYMENT.md  README_EMO_IMPLEMENTATION.md  env.example  env.production  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: baseline.yml  ci.yml
Public Alpha Repo Verification/: PUBLIC_ALPHA_VERIFICATION_FINAL.md  PUBLIC_ALPHA_VERIFICATION_REPORT.md  PUBLIC_READINESS_SUMMARY.md  QUICK_TEST_PLAN.md  VERIFICATION_STATUS_REPORT.md  guide.md  mnx-verify-checklist.md
_archive/docs-archive/: README.md  decisions.md
docs/: ALPHA_TRANSLATOR.md  BACKUP.md  EMO_SPECIFICATION.md  EMO_SYSTEM_TEST_PLAN.md  EMO_TESTING_GUIDE.md  ROADMAP_S.md  SECURITY.md  STRATUM_REVIEW_RESPONSE.md  TESTING_ANALYSIS_EXECUTIVE_SUMMARY.md  TESTING_GAPS_ANALYSIS.md  TESTING_GUIDE.md  api.md  baseline.md  observability.md  rename_ledger.csv
docs/archive/: CHANGELOG.md  MANIFEST.md  MNX_checklist.md  api.md  roadmap.md
infra/: docker-compose-emo.yml  docker-compose-production.yml  docker-compose.yml  init-extensions.sql
infra/postgres-age/: Dockerfile  build.ps1  build.sh  init-age.sql
migrations/: 001_event_core.sql  002_outbox.sql  003_lens_foundation.sql  004_age_setup.sql  004_rls_policies.sql  004_rls_policies_basic.sql  005_watermarks.sql  010_emo_tables.sql  011_emo_graph_schema.sql  README.md  v2_001_event_core.sql  v2_002_outbox.sql  v2_003_lens_foundation.sql  v2_004_age_setup.sql  v2_004_rls_policies.sql  v2_004_rls_policies_basic.sql  v2_005_watermarks.sql
mnx/: __init__.py
mnx/inference/: __init__.py
monitoring/: prometheus.yml
projectors/graph/: Dockerfile  __init__.py  main.py  projector.py  (+2 more)
schemas/: event.schema.json  openapi.json
scripts/: baseline.sh  ci_emo_lineage_integrity.py  ci_emo_translator_parity.py  ci_s0_dupe_409_golden.py  ci_s0_snapshot_and_hash.py  generate_sbom.py  health_check.py  health_check.sh  performance_test.py  performance_test_optimized.py  pin_image_digests.py  run_all_ci_tests.py  run_all_emo_tests.py  run_tests.py  test_deterministic_replay.py
siren/: ONBOARD.md  context_pack.md
tests/: ALLOWLIST.txt  pytest.ini
(+123 files in other folders)
